objects/AWSKey__c.object
<CustomObject>
    <description>Store keys used to communicate with Amazon Web Services</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <label>Secret</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>AWS Credential</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>